# Skema

./: .env.example  CHANGELOG.md  Makefile  README.md  RESEARCH_REPORT_2025.md  SKEMA_DEVELOPMENT_LOG.md  TESTING_STRATEGY.md  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.yml
.claude/commands/: starting.md
Backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  reset_db.py
Backend/app/: config.py  database.py  main.py  websocket.py
Backend/app/api/: ai.py  auth.py  boards.py  calendar.py  journal.py  quest.py  search.py
Backend/app/core/: ai_conversation.py  ai_tools.py  auth.py  exceptions.py  logging.py
Backend/app/middleware/: cors.py  logging.py  rate_limiting.py  security.py
Backend/app/models/: __init__.py  ai.py  audit.py  board.py  calendar.py  journal.py  quest.py  user.py
Backend/app/schemas/: __init__.py  ai.py  auth.py  board.py  calendar.py  common.py  journal.py  quest.py  search.py
Backend/database/: schema.sql  seed.sql
Backend/migrations/: env.py
Backend/migrations/versions/: 001_initial_schema.py  002_add_quest_table.py
Backend/scripts/: backup.sh  start.sh  test.sh
docker/nginx/: nginx.conf  nginx.prod.conf
docs/ADR/: 001-database-architecture.md
scripts/: backup.sh  start.sh
